SIS2-54: Moved Almanac title out of page.html.twig

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -15,6 +15,10 @@
 
   &__inner {
     position: relative;
+
+    & h2 {
+      font-size: var(--base-font-size-xlarge);
+    }
   }
 
   .almanac__list-navigation-arrow {
