--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
@@ -1,4 +1,5 @@
 {{ attach_library('sis_almanac/sis_almanac') }}
+<h2>Almanak</h2>
 <ul class="almanac__list">
   {% for almanac in almanacs %}
     <li class="almanac__list-item{{ almanac['#active'] == true ? ' almanac__list-item--active' }}">{{ almanac }}</li>
