SIS2-93: Styling and theming of lexicon teaser layout block

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
@@ -1,13 +1,20 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-md-6">
-      <h2>{{ atom('lexicon-block-headline') }}</h2>
-      {{ atom('lexicon-block-description') }}
-      <h4>{{ atom('lexicon-block-filter-headline') }}</h4>
-      {{ filters }}
-    </div>
-    <div class="col-xs-12 col-md-6">
-      {{ articles }}
+{{ attach_library('sis/lexicon-teaser') }}
+<div{{ attributes.addClass('lexicon-teaser') }}>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h2 class="lexicon-teaser__title">{{ atom('lexicon-block-headline') }}</h2>
+        <div class="lexicon-teaser__description">
+          {{ atom('lexicon-block-description') }}
+        </div>
+        <h4 class="lexicon-teaser__filters-title">{{ atom('lexicon-block-filter-headline') }}</h4>
+        <div class="lexicon-teaser__filters">
+          {{ filters }}
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-6 lexicon-teaser__articles">
+        {{ articles }}
+      </div>
     </div>
   </div>
 </div>
