--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -97,14 +97,14 @@
         </svg>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
             </div>
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
             </div>
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
               {{ almanac }}
             </div>
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
             </div>
           </div>
         </div>
