--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -29,13 +29,17 @@
     padding-right: var(--container-spacing-mobile);
     padding-left: var(--container-spacing-mobile);
 
-    @media (--viewport-md-min) {
-      flex: 1 0 0%;
+    @media (--viewport-ms-min) {
+      flex: 0 0 50%;
       width: 100%;
       max-width: 100%;
-      margin-bottom: 0;
       padding-right: var(--container-spacing);
       padding-left: var(--container-spacing);
+    }
+
+    @media (--viewport-md-min) {
+      flex: 0 0 25%;
+      margin-bottom: 0;
     }
   }
 
