SIS2-17: Fix footer link color

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -19,6 +19,10 @@
     & h2 {
       font-size: var(--base-font-size-xlarge);
     }
+
+    &.section.theme a {
+      color: var(--color-white);
+    }
   }
 
   .almanac__list-navigation-arrow {
