SIS2-93: Changes to lexicon blocks

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -1,11 +1,14 @@
-.lexicon-teaser {
-  &__title {
-    margin-bottom: 12px;
-  }
+.lexicon {
 
-  &__description {
-    padding-bottom: 24px;
-    font-size: var(--base-font-size-large);
+  &-teaser {
+    &__title {
+      margin-bottom: 12px;
+    }
+
+    &__description {
+      padding-bottom: 24px;
+      font-size: var(--base-font-size-large);
+    }
   }
 
   &__filters {
