--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -67,6 +67,8 @@
  *
  */
 #}
+{{ attach_library('sis/inspiration-overview') }}
+
 {% set subject_items = content.field_subject['#items'] %}
 
 <a href="{{ url }}" class="inspiration-overview__item-link">
