--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
@@ -1,7 +1,10 @@
-<div id="lexicon-items" class="lexicon-teaser__items">
+<div id="lexicon-items" class="lexicon__items">
   {{ articles }}
-</div>
 
-{% if load_more %}
-  <a href="{{ path('sis_lexicon.get_articles', {'letter': letter, 'limit': 0, 'page': 0}) }}" class="use-ajax">{{ 'Show all lexicon articles with the letter @letter'|t({'@letter': letter}) }}</a>
-{% endif %}
+  {% if pager %}
+    <div class="lexicon__more_link">
+      <a href="{{ path('sis_lexicon.get_articles', {'letter': letter, 'limit': 0, 'page': 0}) }}" id="lexicon_more-link"
+         class="use-ajax">{{ 'Show all lexicon articles with the letter @letter'|t({'@letter': letter}) }}</a>
+    </div>
+  {% endif %}
+</div>
