SIS2-93: Changed lexicon items class

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
@@ -19,7 +19,7 @@
   'section--spacing-top-' ~ settings.column_spacing_top,
   'section--spacing-bottom-' ~ settings.column_spacing_bottom,
   settings.color_theme ? 'section--place-top',
-  settings.column_width == 'fullwidth' ? 'section--fullwidth',
+  settings.column_width == 'fullwidth' ? 'section--fullwidth'
 ] %}
 
 {% if settings.color_theme is not empty %}
