--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
@@ -8,6 +8,11 @@
   padding: 30px 0;
   font-size: var(--base-font-size-small);
 
+  & ol {
+    margin: 0;
+    padding: 0;
+  }
+
   &__items {
     position: relative;
     z-index: 1;
