--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -1,5 +1,15 @@
 .article-page {
   &__description {
+    margin-bottom: 24px;
     font-size: var(--base-font-size-medium);
+  }
+
+  &__image {
+    margin-bottom: 24px;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
 }
