--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -83,7 +83,12 @@
           <div class="article-page__description">
             {{ node.field_description.value|t }}
           </div>
-          {{ content }}
+          {% if media_image %}
+            <div class="article-page__image">
+              {{ media_image }}
+            </div>
+          {% endif %}
+          {{ content|without('field_list_date') }}
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1">
