SIS2-9: Added top image to page header + removed list image from article  for article node type

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -80,15 +80,13 @@
     <div class="row">
       <div class="col-md-8 col-lg-7">
         <div{{ content_attributes }}>
+          {% if node.field_header[0] %}
+            <h1 class="article-page__title">{{ label }}</h1>
+          {% endif %}
           <div class="article-page__description">
             {{ node.field_description.value|t }}
           </div>
-          {% if media_image %}
-            <div class="article-page__image">
-              {{ media_image }}
-            </div>
-          {% endif %}
-          {{ content|without('field_list_date') }}
+          {{ content|without(['field_list_date', 'field_header']) }}
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1">
