--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -1,4 +1,24 @@
 .article-page {
+  &__hero {
+    width: 100%;
+    height: 440px;
+
+    picture,
+    img {
+      display: block;
+      height: inherit;
+    }
+
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__title {
+    margin-bottom: 24px;
+  }
+
   &__description {
     margin-bottom: 24px;
     font-size: var(--base-font-size-medium);
