SIS2-12: Styling and theming of related articles

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -32,4 +32,20 @@
       height: auto;
     }
   }
+
+  &__related {
+    &-header {
+      margin-bottom: 48px;
+    }
+
+    &-items {
+      display: flex;
+      gap: 36px;
+    }
+
+    .inspiration-overview__item-link {
+      width: calc(25% - 18px);
+      height: auto;
+    }
+  }
 }
