--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
@@ -29,9 +29,8 @@
   }
 
   .accordion-item {
-    color: var(--theme-accordion-text-color);
-    background-color: var(--theme-accordion-background-color);
-    border-color: var(--theme-accordion-border-color);
+    color: var(--theme-accordion-color);
+    border-color: var(--theme-accordion-color);
   }
 
   .checkbox,
