--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
@@ -17,24 +17,19 @@
 }
 
 .accordion-item {
-  color: var(--theme-accordion-text-color);
-  background-color: var(--theme-accordion-background-color);
-  box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
+  color: var(--theme-button-color);
+  border-bottom: 1px solid var(--theme-accordion-color);
 
   &.hide {
     display: none;
-  }
-
-  &:not(:last-child) {
-    margin-bottom: 15px;
   }
 
   &__headline {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-height: 70px;
-    padding: 10px 30px;
+    min-height: 62px;
+    padding: 10px 0;
     cursor: pointer;
 
     &.active {
@@ -48,8 +43,9 @@
   &__title {
     margin-bottom: 0;
     padding-right: 20px;
-    font-weight: 500;
-    font-size: var(--base-font-size-large);
+    font-weight: var(--heading-font-weight);
+    font-size: var(--base-font-size);
+    font-family: var(--base-font-family);
     line-height: 1.3;
   }
 
@@ -58,19 +54,17 @@
     flex-shrink: 0;
     width: 44px;
     height: 44px;
-    margin-top: -7px;
-    background-color: var(--color-green);
-    border-radius: 22px;
+    margin-top: -6px;
 
     &::after {
       position: absolute;
       top: 12px;
       left: 15px;
       flex-shrink: 0;
-      width: 14px;
-      height: 14px;
-      margin-top: -7px;
-      border: 2px solid var(--color-white);
+      width: 12px;
+      height: 12px;
+      margin-top: -6px;
+      border: 2px solid var(--theme-accordion-color);
       border-top: 0;
       border-left: 0;
       transform: rotate(45deg);
@@ -94,7 +88,7 @@
   }
 
   &__content.active {
-    padding: 0 30px 20px;
+    padding: 0 0 30px;
 
     .accordion-item__text {
       height: auto;
