--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -22,7 +22,7 @@
     }
   }
 
-  &__item {
+  &__item-wrapper {
     display: flex;
     flex-direction: column;
     margin-bottom: 44px;
@@ -43,15 +43,27 @@
     }
   }
 
-  &__item-link {
+  &__item {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
+  }
+
+  &__item-inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: #fff;
+    box-shadow: 0 4px 18px rgb(131 131 131 / 25%);
+  }
+
+  &__item-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     color: var(--color-purple);
     text-decoration: none;
-    background-color: #fff;
-    box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
   }
 
   &__image {
@@ -130,6 +142,7 @@
       font-weight: 800;
       font-size: var(--base-font-size-extra-small);
       font-family: var(--base-font-family);
+      text-decoration: none;
       background-color: var(--color-yellow);
     }
 
@@ -155,6 +168,10 @@
   &__list {
     margin: 0;
     padding: 0;
+  }
+
+  &__list-links {
+    margin-top: 40px;
   }
 
   &__list-item {
