--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/field/field--node--field-subject--article.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/field/field--node--field-subject--article.html.twig
@@ -42,19 +42,6 @@
   ]
 %}
 
-{% if label_hidden %}
-  {% if multiple %}
-    {% for item in items %}
-      <div class="inspiration-overview__subject-item">{{ item.content }}</div>
-    {% endfor %}
-  {% else %}
-    {% for item in items %}
-      <div class="inspiration-overview__subject-item">{{ item.content }}</div>
-    {% endfor %}
-  {% endif %}
-{% else %}
-    <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
-    {% for item in items %}
-      <div class="inspiration-overview__subject-item">{{ item.content }}</div>
-    {% endfor %}
-{% endif %}
+{% for item in items %}
+  <a class="inspiration-overview__subject-item" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': item.content['#taxonomy_term'].tid.value}) }}">{{ item.content['#taxonomy_term'].name.value }}</a>
+{% endfor %}
