SIS2-93: Hide lexicon__letter from lexicon__teaser

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -1,5 +1,5 @@
 .lexicon {
-  &--teaser {
+  &-teaser {
     .section--fullwidth & {
       padding-right: var(--container-spacing-mobile);
       padding-left: var(--container-spacing-mobile);
@@ -17,6 +17,12 @@
     &__description {
       padding-bottom: 24px;
       font-size: var(--base-font-size-large);
+    }
+
+    &__articles {
+      .lexicon__letter {
+        display: none;
+      }
     }
   }
 
