SIS2-93: Style changes to lexicon list items

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -40,7 +40,8 @@
       list-style-type: none;
 
       li {
-        display: inline;
+        position: relative;
+        display: inline-block;
         margin-right: 18px;
         margin-bottom: 12px;
 
