SIS2-18: Changed page title template markup and twig include

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -83,11 +83,16 @@
         <div{{ content_attributes }}>
           {% if node.field_header[0] %}
             <h1 class="article-page__title">{{ label }}</h1>
+          {% else %}
+            {% include '@reusable-component/page-title.twig' with {
+              'attributes': create_attribute().addClass('article-page__title'),
+              'title': content.title,
+            } %}
           {% endif %}
           <div class="article-page__description">
             {{ node.field_description.value|t }}
           </div>
-          {{ content|without(['field_list_date', 'field_header']) }}
+          {{ content|without(['field_list_date', 'field_header', 'title']) }}
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1">
