--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page-title.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page-title.html.twig
@@ -1,5 +1,1 @@
-<section class="section section--spacing-top-small section--spacing-bottom-small">
-  <div class="container">
-    <h1>{{ title }}</h1>
-  </div>
-</section>
+{{ title }}
