--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
@@ -1,7 +1,7 @@
 {{ attach_library('sis/lexicon') }}
 <div{{ attributes.addClass('lexicon-teaser') }}>
   <div class="row">
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-6 col-lg-5">
       <h2 class="lexicon-teaser__title">{{ atom('lexicon-block-headline') }}</h2>
       <div class="lexicon-teaser__description">
         {{ atom('lexicon-block-description') }}
@@ -9,7 +9,7 @@
       <h4 class="lexicon-teaser__filters-title">{{ atom('lexicon-block-filter-headline') }}</h4>
       {{ filters }}
     </div>
-    <div class="col-xs-12 col-md-6 lexicon-teaser__articles">
+    <div class="col-xs-12 col-md-6 col-lg-offset-1 col-lg-6 lexicon-teaser__articles">
       {{ articles }}
     </div>
   </div>
