--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -40,6 +40,7 @@
   --theme-divider-background-color: var(--color-black);
   --theme-accordion-color: var(--color-purple);
   --theme-input-border: #e5e3de;
+  --theme-input-border-dark: var(--color-purple);
   --theme-input-color-marked: var(--color-primary);
   --theme-status-message-background-color: #c6c6c6;
   --theme-status-message-background-color-status: #dff0d8;
