--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -1,6 +1,7 @@
 .overview-form {
   &-contents {
     display: flex;
+    flex-wrap: wrap;
 
     .inspiration-overview__item {
       flex: 0 0 100%;
@@ -18,6 +19,24 @@
         padding: var(--container-spacing);
       }
     }
+
+    .pager {
+      width: 100%;
+      margin-top: 10px;
+    }
+  }
+
+  .inspiration-overview__item-inner,
+  .inspiration-overview__item {
+    height: auto;
+  }
+
+  .inspiration-overview__item {
+    min-height: auto;
+  }
+
+  &__header {
+    margin-bottom: 26px;
   }
 
   &__search {
@@ -36,6 +55,32 @@
 
         .form-item:last-child {
           margin-bottom: 0;
+        }
+      }
+    }
+    &-input {
+      position: relative;
+      width: 100%;
+      height: 49px;
+
+      input[type="search"] {
+        height: 100%;
+        border-radius: 25px;
+        border-color: var(--theme-input-border-dark);
+      }
+
+      button.button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 15px 0;
+        min-height: 49px;
+        height: 49px;
+        width: 70px;
+        background-color: transparent;
+
+        svg {
+          height: 100%;
         }
       }
     }
