--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--accordion.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--accordion.html.twig
@@ -39,7 +39,7 @@
   {{ title_prefix }}
   {{ title_suffix }}
   <h2 class="accordion__headline">{{ content.field_accordion_headline }}</h2>
-  <div class="accordion__items">{{ content.field_accordion_items }}</div>
+  <div class="accordion__items">{{ content.field_accordion_itemsaaa }}</div>
   {% if items_count > 5 and show_more_text %}
     <div v-show="!showAllHiddenItems">
       <br>
