--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
@@ -1,16 +1,23 @@
-<div id="lexicon-items" class="lexicon__items">
+<div id="lexicon-inner" class="lexicon__inner">
   {% if letter %}
     <div class="lexicon__letter">
       <h2>{{ letter }}</h2>
     </div>
   {% endif %}
 
-  {{ articles }}
+  <div class="lexicon__items">
+    {{ articles }}
+  </div>
 
   {% if pager %}
     <div class="lexicon__more_link">
       <a href="{{ path('sis_lexicon.get_articles', {'letter': letter, 'limit': 0, 'page': 0}) }}" id="lexicon_more-link"
-         class="use-ajax">{{ 'Show all lexicon articles with the letter @letter'|t({'@letter': letter}) }}</a>
+         class="use-ajax button button--ghost button--center">{{ 'Show all lexicon articles with the letter @letter'|t({'@letter': letter}) }}
+        {% include '@reusable-component/svg-icon.twig' with {
+          'attributes': '',
+          'svgIconName': 'carret'
+        } %}
+      </a>
     </div>
   {% endif %}
 </div>
