--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -23,6 +23,53 @@
       .lexicon__letter {
         display: none;
       }
+
+      .lexicon__items {
+        row-gap: var(--gutter-width-mobile);
+
+        @media (--viewport-md-min) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+  }
+
+  &__filter-wrapper {
+    display: grid;
+    align-items: flex-end;
+    width: 100%;
+    margin-bottom: 58px;
+
+    @media (--viewport-md-min) {
+      grid-template-columns: auto 400px;
+    }
+
+    .lexicon__search {
+      position: relative;
+      height: 49px;
+      margin-bottom: 22px;
+
+      input[type="search"] {
+        height: 100%;
+        border-color: var(--theme-input-border-dark);
+        border-radius: 25px;
+      }
+
+      .button {
+        position: absolute;
+        top: 5px;
+        right: 4px;
+        width: 50px;
+        height: 40px;
+        min-height: 39px;
+        padding: 0;
+        background-color: transparent;
+
+        svg {
+          width: 18px;
+          height: 18px;
+        }
+      }
     }
   }
 
@@ -41,7 +88,7 @@
 
       li {
         position: relative;
-        display: inline-block;
+        float: left;
         margin-right: 18px;
         margin-bottom: 12px;
 
@@ -54,38 +101,58 @@
             font-size: var(--base-font-size-xxlarge);
           }
         }
+
+        @media (--viewport-md-min) {
+          &:nth-child(15) {
+            clear: left;
+          }
+        }
       }
     }
   }
 
   &__items {
-    display: flex;
-    flex-flow: column;
-    margin-right: var(--half-gutter-compensation-mobile);
-    margin-left: var(--half-gutter-compensation-mobile);
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: var(--gutter-width-mobile);
 
     @media (--viewport-md-min) {
-      margin-right: var(--half-gutter-compensation);
-      margin-left: var(--half-gutter-compensation);
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: var(--gutter-width);
     }
 
-    @media (--viewport-ms-min) {
-      flex-flow: row;
+    @media (--viewport-lg-min) {
+      grid-template-columns: repeat(4, 1fr);
     }
 
     .inspiration-overview__item {
       height: auto;
-      padding-right: var(--half-gutter-width-mobile);
-      padding-left: var(--half-gutter-width-mobile);
-
-      @media (--viewport-md-min) {
-        padding-right: var(--half-gutter-width);
-        padding-left: var(--half-gutter-width);
-      }
+      padding-right: 0;
+      padding-left: 0;
 
       .inspiration-overview__content {
         padding-bottom: 36px;
       }
+
+      &-inner {
+        height: 100%;
+      }
+    }
+  }
+
+  &__more_link {
+    margin-top: 39px;
+
+    a.button {
+      padding: 18px 61px 18px 23px;
+
+      svg {
+        position: absolute;
+        right: 23px;
+        width: 14px;
+        height: 8px;
+      }
     }
   }
 }
+
