--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -58,6 +58,7 @@
         }
       }
     }
+
     &-input {
       position: relative;
       width: 100%;
@@ -65,18 +66,18 @@
 
       input[type="search"] {
         height: 100%;
-        border-radius: 25px;
         border-color: var(--theme-input-border-dark);
+        border-radius: 25px;
       }
 
-      button.button {
+      & button.button {
         position: absolute;
         top: 0;
         right: 0;
-        padding: 15px 0;
-        min-height: 49px;
-        height: 49px;
         width: 70px;
+        height: 49px;
+        min-height: 49px;
+        padding: 15px 0;
         background-color: transparent;
 
         svg {
