--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node.html.twig
@@ -67,26 +67,24 @@
  *
  */
 #}
-{{ attach_library('sis/page')}}
+{{ attach_library('sis/page') }}
 <article{{ attributes.addClass(classes) }}>
   <div class="container">
     <div class="row">
       <div class="col-md-7 col-xs-12">
-        {% if node.field_header[0] %}
-          <h1 class="page__title">{{ label }}</h1>
-        {% else %}
+        {% if node.field_header[0] is empty %}
           {% include '@reusable-component/page-title.twig' with {
             'attributes': create_attribute().addClass('page__title'),
             'title': content.title,
           } %}
-        {% endif %}
         <div class="page__description">
           {{ node.field_description.value|t }}
         </div>
-      </div>
-      <div{{ content_attributes }}>
-        {{ content|without(['field_list_date', 'field_header', 'title']) }}
+        {% endif %}
       </div>
     </div>
+  </div>
+  <div{{ content_attributes }}>
+    {{ content|without(['field_list_date', 'field_header', 'title']) }}
   </div>
 </article>
