--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -20,6 +20,7 @@
   --color-purple: #3d2859;
   --color-purple-dark: #1f0640;
   --color-blue: #408e9f;
+  --color-blue-darker: #4390A1;
   --color-blue-ice: #85cddb;
   --color-blue-light: #f2fafc;
   --color-yellow: #ffce42;
