A lot of changes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -79,5 +79,9 @@ body.adminimal-admin-toolbar header.header {
         fill: var(--color-white);
       }
     }
+
+    form {
+      position: relative;
+    }
   }
 }
