SIS2-97: Added go-to-map item + business card styling

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/checkbox.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/checkbox.css
@@ -33,6 +33,11 @@
     content: "";
   }
 
+  &:checked + label::before {
+    background-color: var(--theme-input-background-marked);
+  }
+
+
   &:checked + label::after,
   &:not(:checked) + label::after {
     position: absolute;
