--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/templates/overview-list-item.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/templates/overview-list-item.html.twig
@@ -1,5 +1,5 @@
 <div{{ attributes.addClass(['inspiration-overview__item']) }}>
-  <div class="inspiration-overview__item-inner">
+  <div class="inspiration-overview__item-inner inspiration-overview__item-inner--goto-map">
     <div class="inspiration-overview__item-title">{{  headline }}</div>
     {{ link(link.title, link.uri, { 'class':['button', 'button--ghost']} ) }}
   </div>
