--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -26,9 +26,30 @@
     }
   }
 
-  .inspiration-overview__item-inner,
-  .inspiration-overview__item {
-    height: auto;
+  .inspiration-overview__item-inner--goto-map {
+    justify-content: center;
+    padding: 48px;
+    background-color: var(--color-blue);
+    background-image: url("../../../../../dist/images/goto-map-cta-bg.svg");
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: contain;
+
+    .inspiration-overview__item-title {
+      max-width: 200px;
+      margin: 0 auto 24px;
+      color: var(--color-white);
+      font-weight: 600;
+      font-size: var(--base-font-size-medium);
+      text-align: center;
+    }
+
+    .button {
+      margin: 0 auto;
+      padding: 0 25px;
+      color: var(--color-white);
+      border: 2px solid var(--color-white);
+    }
   }
 
   .inspiration-overview__item {
