SIS2-103: Added read-more library and markup to profile page

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
@@ -24,6 +24,7 @@
 #}
 {{ attach_library('sis/profile') }}
 {{ attach_library('sis/breadcrumb') }}
+{{ attach_library('sis/read-more') }}
 {% set classes = [
   'profile',
   'profile--' ~ profile.id,
@@ -48,8 +49,19 @@
       <div class="col-md-8 col-lg-7 col-xs-12">
         <h1 class="profile__page-title">{{ profile.field_organization_address.organization }}</h1>
         {{ title_suffix.contextual_links }}
-        <div class="profile__description">
-          {{ profile.field_organization_description.value|t }}
+        <div class="profile__description read-more__content-wrapper">
+          <div class="read-more__content">
+            {% if profile.field_organization_description[0] %}
+              {{ profile.field_organization_description.value|t }}
+            {% endif %}
+          </div>
+          <a href="#" class="read-more__trigger">
+            <div class="read-more__label--expanded">{{ 'Hide'|t }}</div>
+            <div class="read-more__label--collapsed">{{ 'Read more'|t }}</div>
+            <div class="read-more__arrow">
+              <span></span>
+            </div>
+          </a>
         </div>
       </div>
       <div class="col-md-4 col-lg-4 col-lg-offset-1 col-xs-12 profile__info">
