--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/search-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/search-page.css
@@ -39,6 +39,26 @@
   &__pager {
     margin-bottom: 40px;
   }
+
+  &__header {
+    text-align: center;
+    min-height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &-inner {
+      height: 100%;
+    }
+  }
+
+  &__title {
+    font-size: var(--base-font-size-xxxxxlarge);
+  }
+
+  &__description {
+    font-size: var(--base-font-size-xxlarge);
+  }
 }
 
 .search-result {
