SIS2-97: Added breadcrumb

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
@@ -39,11 +39,7 @@
       {{ content.field_organization_graphic }}
     </div>
   {% endif %}
-  <div id="block-breadcrumbs">
-    <div class="container">
-      <div class="breadcrumb"></div>
-    </div>
-  </div>
+  {{ breadcrumb }}
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-lg-7 col-xs-12">
