--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/element/select.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/element/select.html.twig
@@ -1,4 +1,4 @@
-{{ attach_library('komponent/form-select') }}
+{{ attach_library('sis/form-select') }}
 
 {% set selected_option = '' %}
 {% apply spaceless %}
