--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
@@ -18,7 +18,7 @@
 
 .accordion-item {
   color: var(--theme-button-color);
-  border-bottom: 1px solid var(--theme-accordion-border-color);
+  border-bottom: 1px solid var(--theme-accordion-color);
 
   &.hide {
     display: none;
@@ -43,7 +43,7 @@
   &__title {
     margin-bottom: 0;
     padding-right: 20px;
-    font-weight: 800;
+    font-weight: var(--heading-font-weight);
     font-size: var(--base-font-size);
     font-family: var(--base-font-family);
     line-height: 1.3;
@@ -79,6 +79,7 @@
     word-break: break-word;
     visibility: hidden;
     opacity: 0;
+    transition: opacity 1s;
 
     img {
       max-width: 100%;
@@ -87,13 +88,21 @@
   }
 
   &__content.active {
-    padding: 0 0 20px;
+    padding: 0 0 30px;
 
     .accordion-item__text {
       height: auto;
       font-size: var(--base-font-size);
       visibility: visible;
       opacity: 1;
+      transition: none;
+    }
+  }
+
+  .accordion-button {
+    &-expand,
+    &-collapse {
+      cursor: pointer;
     }
   }
 }
